--- a/src/index.sass
+++ b/src/index.sass
@@ -30,12 +30,14 @@ code, .code-font
   box-shadow: none !important
 
 .ant-popover-inner
+  border: $default-border
   border-radius: 10px
   overflow: hidden
 .ant-popover-arrow
-  overflow: visible
+  display: none
 
 .ant-dropdown-menu
+  border: $default-border
   border-radius: 10px
   overflow: hidden
   padding: 0
